--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -6,6 +6,8 @@
 <script type="text/javascript" charset="utf-8" src="cordova-2.3.0.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script src="http://code.jquery.com/mobile/1.1.1/jquery.mobile-1.1.1.min.js"></script>
+<script src="phonegap.js"></script>
+<script src="barcodescanner.js"></script>
 <script>
 	var target_div = "#contents";
 	var nextID = null;
