corrected vacant bldg category

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -177,7 +177,7 @@
  				      <option value="sidewalk" >Sidewalk Repair</option>
  				       <option value="snow" >Snow</option>
  				        <option value="tree" >Tree </option>
- 				         <option value="vacant_bldg" >Vacant/Abandoned Building</option>
+ 				         <option value="vacant" >Vacant/Abandoned Building</option>
  				          <option value="water" >Water Leak</option>
  				</select>
 				 <br />
