add strong password commit

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -81,7 +81,7 @@
 		// post the content to wordpress
 		//alert(nounce);
 		var username = "&author=admin";
-		var pwd = "&user_password=password";
+		var pwd = "&user_password=Nh62Ezm3SH";
 		var title = "&title="+jQuery("#post_title").val();
 		var content = "&content="+jQuery("#post_contents").val();
 		var categories = "&categories="+jQuery("#post_categories").val();
